# Cryptile

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE.txt  README.md  sqlcipher-plugin-build.bat  vcpkg.json
resources/: resource.qrc
sqlcipher-plugin/: CMakeLists.txt  vcpkg.json
sqlcipher-plugin/sqlite/: CMakeLists.txt  smain.cpp  sqlite.json
src/: databasemanager.cpp  databasemanager.h  dialog.h  keymanager.cpp  keymanager.h  loginwidget.cpp  loginwidget.h  main.cpp  mainapp.cpp  mainapp.h  mainwindowwidget.cpp  mainwindowwidget.h  passwordcardwidget.cpp  passwordcardwidget.h  passwordform.cpp  registerwidget.cpp  registerwidget.h
src/crypto/: crypto.cpp  crypto.h
src/keymanager/: keymanager.cpp  keymanager.h
src/sqlcipher/: CMakeLists.txt
src/storage/: data_manager.cpp  data_manager.h  data_record.h  database_manager.cpp  database_manager.h
src/utils/: datetime_utils.h  lock_limit.h  secure_buffer.h  widget_helpers.h
ui/: dialog.ui  loginwidget.ui  mainapp.ui  mainwindowwidget.ui  passwordcardwidget.ui  passwordform.ui  registerwidget.ui
ui/common/: data_entry_dialog.cpp  data_entry_dialog.h  data_entry_dialog.ui  dialog.cpp  password_entry_dialog.cpp  password_entry_dialog.h  password_entry_dialog.ui  secure_font_renderer.cpp  secure_font_renderer.h  secure_label.cpp  secure_label.h  secure_line_edit.cpp  secure_line_edit.h  secure_text_widget.cpp  secure_text_widget.h
ui/root/: root_view.cpp  root_view.h  root_view.ui
ui/setup/: setup_view.cpp  setup_view.h  setup_view.ui
ui/unlock/: unlock_view.cpp  unlock_view.h  unlock_view.ui
ui/vault/: data_entry_widget.cpp  data_entry_widget.h  data_entry_widget.ui  password_entry_widget.cpp  password_entry_widget.h  password_entry_widget.ui  secure_label.cpp  secure_label.h  secure_line_edit.cpp  secure_line_edit.h  vault_view.cpp  vault_view.h  vault_view.ui
